--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.25",
     "lucide-react": "^0.553.0",
     "node-fetch": "^3.3.2",
     "react": "^19.2.0",
